[package]
name = "hello-world"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
serde = {version= "1.0.219", features = ["derive"]}
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.6", features = ["cors"] }
